# karaoke-decide

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  Dockerfile  Makefile  PLAN.md  README.md  pyproject.toml
.claude/commands/: coderabbit-review.md  docs-review.md  implement.md  plan.md  test.md
.claude/plans/: better-artist-selection.plan.md  collaborative-recommendations.plan.md  phase4-quiz-recommendations.plan.md  phase5-frontend-auth-discovery.plan.md
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy-frontend.yml  health-monitor.yml  prod-health-check.yml  uptime-monitor.yml
backend/: __init__.py  config.py  i18n.py  main.py
backend/api/: __init__.py  deps.py
backend/models/: admin.py  sync_job.py
backend/services/: __init__.py  auth_service.py  catalog_lookup.py  cloud_tasks_service.py  email_service.py  firestore_service.py  karaoke_link_service.py  known_songs_service.py  listenbrainz_service.py  music_service_service.py  (+6 more)
docs/: API.md  ARCHITECTURE.md  BRAND-STYLE-GUIDE.md  DATA-CATALOG.md  DEVELOPMENT.md  FIRESTORE-IMPORT-PLAN.md  LASTFM-IMPORT-PLAN.md  LESSONS-LEARNED.md  MLHD-IMPORT-PLAN.md  MUSICBRAINZ-MIGRATION-PLAN.md  PLAN-USER-DATA-IMPROVEMENTS.md  PLAN.md  README.md  REQUIREMENTS-QA.md  SPOTIFY-DATA-CATALOG.md  SPOTIFY-MAPPING-PLAN.md  TESTING.md  USER-DATA-VISION.md  VISION.md
frontend/: capture-homepage-screenshots.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
infrastructure/: Pulumi.prod.yaml  Pulumi.yaml  __init__.py  __main__.py  requirements.txt
karaoke_decide/: __init__.py
scripts/: create_normalized_artists_table.py  create_normalized_tracks_table.py  get_prod_test_token.py  glossary.json  inspect_metadata_sqlite.py  lastfm_firestore_import.py  lastfm_import.py  lastfm_import_test.py  lastfm_spotify_mapping.py  link_karaoke_to_recordings.py  listenbrainz_similar.py  load_mlhd_to_bigquery.py  migrate_users_collection.py  migrate_users_to_mbid.py  mlhd_import.py  musicbrainz_etl.py  requirements.txt  setup_audio_analysis_vm.sh  setup_seeding.sh  spotify_audio_analysis_etl.py  spotify_audio_analysis_full_etl.py  spotify_complete_etl.py  spotify_etl.py  spotify_to_bigquery.py  start-emulators.sh  stop-emulators.sh  translate.py  translation_cache.py  validate-translations.py  vm_startup.sh
tests/: __init__.py  conftest.py
(+275 files in other folders)
